# socio-emotion-cognition

./: .gitignore  LICENSE  README.md
behavioural/: neuroimaging_behavioural_measures.csv  patient_demographics.ipynb
behavioural/scoring/: aq10.py  aws_rds.py  edeq.py  hads.py  neuroimaging_measures_tosql.py  pipeline.py  time_difference.py
behavioural/task_behavioural_measures/: task_differences.ipynb
dashboard/: app.py  dashboard.py  run_dashboard
dashboard/templates/: index.html
fNeuro/: README.md  pyproject.toml
fNeuro/fNeuro/: __init__.py
fNeuro/fNeuro/MVPA/: __init__.py  mvpa_functions.py
fNeuro/fNeuro/bayesian/: __init__.py  bayesian.py
fNeuro/fNeuro/behavioural/: __init__.py  data_functions.py  scoring_functions.py
fNeuro/fNeuro/connectivity/: __init__.py  connectivity.py
fNeuro/fNeuro/processing/: __init__.py  processing.py
fNeuro/fNeuro/second_level/: __init__.py  second_level_functions.py
mriqc/: group_differences_measures.ipynb  mric_qc.py
neuroimaging/first_level/: first_level.py
neuroimaging/modelling/: 2ndlevel_modelling.ipynb  Tutotial_secondlevel_randomisation.ipynb  first_level.py  read_spm_mat_file.py
neuroimaging/plots/: check_reg.ipynb  first_level.ipynb  script_jn_plots.py  signal.ipynb
neuroimaging/regressors/: create_task_tsv.py  move_task_files
resting/: .resting_img_path  building_msdl_atlas.ipynb  resting_extraction.ipynb  time_series_extraction_harvard_oxford.ipynb
task_fmri/: frem.ipynb  searchlight.ipynb
utils/: concat_scans.py  fmri_prep_SLURM  rename_files.py  tar_scipt.sh  zip_betas
(+87 files in other folders)
